// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddLog component renders AddLog by default 1`] = `
<form
  className="logForm"
  onSubmit={[Function]}
>
  <div
    className="addLog"
  >
    <div
      className="addCoordinate"
    >
      <label
        htmlFor="coordinate"
      >
        Enter the latitude and longitude of the location (number between -90 and 90):
      </label>
      <div
        className="addLatitude"
      >
        <Textarea
          aria-label="Latitude..."
          cols="30"
          id="latitude"
          name="latitude"
          onChange={[Function]}
          placeholder="insert latitude.."
          required={true}
          rows="2"
          step="0.0000000001"
          type="number"
        />
        <ValidationError />
      </div>
      <div
        className="addLongitude"
      >
        <Textarea
          aria-label="longitude..."
          cols="30"
          id="longitude"
          name="longitude"
          onChange={[Function]}
          placeholder="insert longitude.."
          required={true}
          rows="2"
          step="0.0000000001"
          type="number"
        />
        <ValidationError />
      </div>
    </div>
    <div
      className="addTitle"
    >
      <label
        htmlFor="title"
      >
        Title:
      </label>
      <Textarea
        aria-label="title..."
        cols="30"
        id="title"
        name="title"
        onChange={[Function]}
        placeholder="insert title.."
        required={true}
        rows="2"
      />
    </div>
    <div
      className="addDescription"
    >
      <label
        htmlFor="description"
      >
        Description:
      </label>
      <Textarea
        aria-label="description..."
        cols="30"
        id="description"
        name="description"
        onChange={[Function]}
        placeholder="insert description.."
        required={true}
        rows="2"
      />
    </div>
    <div
      className="addImage"
    >
      <label
        htmlFor="image"
      >
        Image (Please insert a link to your image):
      </label>
      <Textarea
        aria-label="image..."
        cols="30"
        id="image"
        name="image"
        onChange={[Function]}
        placeholder="insert image.."
        rows="2"
      />
    </div>
    <div
      className="addRating"
    >
      <label
        htmlFor="rating"
      >
        Rating (Enter a number between 1 and 10):
      </label>
      <Textarea
        aria-label="rating..."
        cols="30"
        id="rating"
        name="rating"
        onChange={[Function]}
        placeholder="insert rating.."
        required={true}
        rows="2"
        type="number"
      />
      <ValidationError />
    </div>
    <div
      className="addDate"
    >
      <label
        htmlFor="visitDate"
      >
        Visited Date:
      </label>
      <Picker
        className="visitDate"
        name="visit_day"
        onChange={[Function]}
      />
    </div>
    <div
      className="privateBox"
    >
      <label
        htmlFor="setPrivate"
      >
        Set Private:
      </label>
      <select
        className="setBox"
        id="setPrivate"
        name="setPrivate"
        required={true}
      >
        <option
          value="true"
        >
          Public
        </option>
        <option
          value="false"
        >
          Private
        </option>
      </select>
    </div>
  </div>
  <Button
    className="postLogBtn"
    type="submit"
  >
    Add Log
  </Button>
</form>
`;

exports[`AddLog component renders the UI for AddLog as expected 1`] = `
<form
  className="logForm"
  onSubmit={[Function]}
>
  <div
    className="addLog"
  >
    <div
      className="addCoordinate"
    >
      <label
        htmlFor="coordinate"
      >
        Enter the latitude and longitude of the location (number between -90 and 90):
      </label>
      <div
        className="addLatitude"
      >
        <textarea
          aria-label="Latitude..."
          className="Textarea "
          cols="30"
          id="latitude"
          name="latitude"
          onChange={[Function]}
          placeholder="insert latitude.."
          required={true}
          rows="2"
          step="0.0000000001"
          type="number"
        />
      </div>
      <div
        className="addLongitude"
      >
        <textarea
          aria-label="longitude..."
          className="Textarea "
          cols="30"
          id="longitude"
          name="longitude"
          onChange={[Function]}
          placeholder="insert longitude.."
          required={true}
          rows="2"
          step="0.0000000001"
          type="number"
        />
      </div>
    </div>
    <div
      className="addTitle"
    >
      <label
        htmlFor="title"
      >
        Title:
      </label>
      <textarea
        aria-label="title..."
        className="Textarea "
        cols="30"
        id="title"
        name="title"
        onChange={[Function]}
        placeholder="insert title.."
        required={true}
        rows="2"
      />
    </div>
    <div
      className="addDescription"
    >
      <label
        htmlFor="description"
      >
        Description:
      </label>
      <textarea
        aria-label="description..."
        className="Textarea "
        cols="30"
        id="description"
        name="description"
        onChange={[Function]}
        placeholder="insert description.."
        required={true}
        rows="2"
      />
    </div>
    <div
      className="addImage"
    >
      <label
        htmlFor="image"
      >
        Image (Please insert a link to your image):
      </label>
      <textarea
        aria-label="image..."
        className="Textarea "
        cols="30"
        id="image"
        name="image"
        onChange={[Function]}
        placeholder="insert image.."
        rows="2"
      />
    </div>
    <div
      className="addRating"
    >
      <label
        htmlFor="rating"
      >
        Rating (Enter a number between 1 and 10):
      </label>
      <textarea
        aria-label="rating..."
        className="Textarea "
        cols="30"
        id="rating"
        name="rating"
        onChange={[Function]}
        placeholder="insert rating.."
        required={true}
        rows="2"
        type="number"
      />
    </div>
    <div
      className="addDate"
    >
      <label
        htmlFor="visitDate"
      >
        Visited Date:
      </label>
      <div
        className="ant-picker visitDate"
        onMouseUp={[Function]}
      >
        <div
          className="ant-picker-input"
        >
          <input
            name="visit_day"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            placeholder="Select date"
            readOnly={true}
            size={12}
            title=""
            value=""
          />
          <span
            className="ant-picker-suffix"
          >
            <span
              aria-label="calendar"
              className="anticon anticon-calendar"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="calendar"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      className="privateBox"
    >
      <label
        htmlFor="setPrivate"
      >
        Set Private:
      </label>
      <select
        className="setBox"
        id="setPrivate"
        name="setPrivate"
        required={true}
      >
        <option
          value="true"
        >
          Public
        </option>
        <option
          value="false"
        >
          Private
        </option>
      </select>
    </div>
  </div>
  <button
    className="Button postLogBtn"
    type="submit"
  >
    Add Log
  </button>
</form>
`;
